Fixed Alignment of Bullets in github container

--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,7 @@ iframe {
     margin: 45px auto;
     box-shadow: 0 1.5px 0 0 rgba(0,0,0,0.1);
 }
+
+h5 > a:link {
+    font-size:1.25rem;
+}
